<resources>
    <string name="app_name">Mommy_and_My</string>
    <string name="spanish">Español</string>
    <string name="textocrecue">Elegir Idioma</string>
    <string name="english">Ingles</string>
    <string name="textois">Iniciar Sesion</string>
    <string name="texto1Menu">Hoy</string>
    <string name="nombre">Nombre</string>
    <string name="GuiaE">Guía de Entrenamiento</string>
    <string name="monitoreom">Monitoreo del bebe</string>
    <string name="mominform">Mamá\nInformada</string>
    <string name="controlm">Control y\nSintomas</string>
    <string name="forom">Foro\n</string>
    <string name="Home">Home</string>
    <string name="Config">Config</string>
    <string name="cuenta">Perfil</string>
    <string name="continuar">Continuar</string>
    <string name="boton1menu">b1</string>
    <string name="boton2menu">b2</string>
    <string name="boton3menu">b3</string>
    <string name="boton4menu">b4</string>
    <string name="boton5menu">b5</string>
    <string name="boton6menu">b6</string>
    <string name="botonfmenu">bf</string>
    <string name="mantenlacalma">Manten la calma</string>
    <string name="parrafo">Envió automático de ubicación  en\n proceso, contactando con los hospitales\n mas cercanos</string>
    <string name="q1">¿Te encuentras sola?</string>
    <string name="q2">¿Qué síntomas presentas?</string>
    <string name="rq21">Dolor de cabeza</string>
    <string name="rq22">Hinchazón de pies, manos y \ncara</string>
    <string name="rq23">Contracciones intensas</string>
    <string name="rq24">Otro</string>
    <string name="q3">¿Zona donde resides o vives \nactualmente?</string>
    <string name="rq31">Rural</string>
    <string name="rq32">Urbana</string>
    <string name="parraf2c">Presiona en el ícono para llamar a \ncontactos de emergencia</string>
    <string name="btll">botonllamada</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="titcontrol">Registra tus síntomas aquí</string>
    <string name="boton1itemc">c1</string>
    <string name="titcont">Contador de Patadas</string>
    <string name="Pulsar">Pulsa en el botón al sentir las patadas de tu bebe</string>
    <string name="reporte">Reporte de estadisticas</string>
    <string name="movimeintos">Movimientos adicionales</string>
    <string name="btoncont">btcont</string>
    <string name="indica">Pulsa en el botón al sentir las patadas de tu bebe</string>
    <string name="report">Reporte de estadisticas</string>
    <string name="movi">Movimientos adicionales</string>
    <string name="itemcontrol1">Registro de frecuencia \ncardíaca</string>
    <string name="itemcontrol2">Contador de \ncontracciones</string>
    <string name="itemcontrol3">Síntomas adicionales</string>
    <string name="itemcontrol4">Cambios corporales</string>
    <string name="im1">imagen</string>
    <string name="msg1">Ejercicios a realizar durante el \nembarazo</string>
    <string name="msg2">mientras que muchos tipos de ejercicios son seguros durante el embarazo....</string>
    <string name="msg3">Sintomas y cambios corporales</string>
    <string name="msg4"> Explora los cambios físicos y los síntomas comunes que experimentas durante el embarazo, y cómo afectan tu bienestar general....</string>
    <string name="titlinfo"> Lecturas recomendadas </string>
    <string name="barrab"> Buscar </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank \nfragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- <string name="hello_blank_fragment">Hello blank fragment</string> -->
    <string name="Calendario">Calendario</string>

</resources>