<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/circulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/circleprev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textColor="@color/rojoprev"
        android:textStyle="bold"
        android:text="@string/q2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@id/circulo"
        tools:ignore="MissingConstraints" />
    <!-- android:text="@string/q1" -->

    <!--  android:text="@string/si" -->

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/rq21"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.386"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPregunta"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/casilla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/rq22"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/casilla3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/rq23"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintTop_toBottomOf="@id/casilla2"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/casilla4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/rq24"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/casilla3"
        tools:ignore="SmallSp" />

    <!--  android:text="@string/si" -->

</androidx.constraintlayout.widget.ConstraintLayout>