<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/circulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/circleprev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints" />

    <!-- android:text="@string/q1" -->

    <TextView
        android:id="@+id/textPregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q3"
        android:textColor="@color/rojoprev"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toEndOf="@id/circulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:textSize="10sp"
        android:text="@string/rq31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPregunta"
        tools:ignore="SmallSp" />
    <!--  android:text="@string/si" -->

    <CheckBox
        android:id="@+id/casilla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:button="@drawable/selector_checkbox"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/rq32"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.287"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox"
        tools:ignore="SmallSp" />

    <!--  android:text="@string/si" -->

</androidx.constraintlayout.widget.ConstraintLayout>