<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rosa"
    tools:context=".datos_mb_1">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ambas"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/supambas"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.001" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginBottom="536dp"
            android:text="@string/textocrecue"
            android:textColor="@color/cafedatos"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndO="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="id/@ImageView"
            app:layout_constraintVertical_bias="0.1" />

        <Button
            android:id="@+id/btn_spanish"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="420dp"
            android:paddingHorizontal="120dp"
            android:paddingVertical="12dp"
            android:text="@string/spanish"
            android:textSize="20sp"
            android:textColor="@color/cafeClaro"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/rosa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="id/@text1"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/btn_english"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/rosa"
            android:paddingHorizontal="120dp"
            android:paddingVertical="12dp"
            android:text="@string/english"
            android:textColor="@color/cafeClaro"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_spanish"
            app:layout_constraintVertical_bias="0.1"/>







</androidx.constraintlayout.widget.ConstraintLayout>