<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu1">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/elipsemenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ellipse8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/texto1m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto1Menu"
            android:textSize="38sp"
            android:textColor="@color/rosahoy"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintTop_toBottomOf="@id/elipsemenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imcentral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/embrion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/texto1m"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/item01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item1"
            android:contentDescription="@string/boton1menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imcentral"
            app:layout_constraintHorizontal_bias="0.1"
            />

        <ImageButton
            android:id="@+id/item02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item2"
            android:contentDescription="@string/boton2menu"
            app:layout_constraintStart_toEndOf="@id/item01"
            app:layout_constraintTop_toBottomOf="@id/imcentral"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/item03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item3"
            android:contentDescription="@string/boton1menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item01"
            app:layout_constraintHorizontal_bias="0.1"
            />

        <ImageButton
            android:id="@+id/item04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item4"
            android:contentDescription="@string/boton2menu"
            app:layout_constraintStart_toEndOf="@id/item03"
            app:layout_constraintTop_toBottomOf="@id/item02"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>